# cyber-lakehouse

./: .gitignore  README.md  main.py  pyproject.toml  run_spark_job.ps1
.github/workflows/: ci.yml
data/bronze/traffic_delta/: .part-00000-737f683d-a722-445e-aae8-1b1a295a99a5-c000.snappy.parquet.crc  .part-00001-efa2509c-d6b2-4da9-a2cc-b02263acbc9e-c000.snappy.parquet.crc  .part-00002-806dbaa2-2418-4311-bc3c-ac1dd87b8b19-c000.snappy.parquet.crc  .part-00003-78d7c0d3-85a7-4c0a-a9e1-c47a6dbb11d9-c000.snappy.parquet.crc  .part-00004-7331da34-a9d7-4621-86e2-f4017435b1a2-c000.snappy.parquet.crc  .part-00005-5af72a45-073c-4e22-9806-8d8f4bec2d89-c000.snappy.parquet.crc  .part-00006-941a9739-5a2b-4557-9b49-5b3323befa52-c000.snappy.parquet.crc  .part-00007-3704062c-9970-4a4a-8768-c67fdea0566a-c000.snappy.parquet.crc  .part-00008-eb64a777-6c38-42b3-b537-a499102bf234-c000.snappy.parquet.crc  .part-00009-b00b55f6-5846-4b24-8305-66a925c31449-c000.snappy.parquet.crc  .part-00010-54c1e286-467f-4128-8411-aa5b96bae946-c000.snappy.parquet.crc  (+13 more)
docker/: docker-compose.yml  spark.Dockerfile
metastore_db/: db.lck  service.properties
metastore_db/log/: log.ctrl
reports/: metrics.json
src/cyber_lakehouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jobs/: 01_ingest_bronze.py  02_clean_silver.py  03_build_gold_features  03_build_gold_features.py  04_train_model.py  05_score_predictions.py
src/sql/: analytics.sql  quality_check.sql
src/utils/: io,py  io.py  schema.py  spark_session.py
tests/: test_quality_rules.py  test_schema.py
(+86 files in other folders)
